# python_for_datascience

./: README.md
Python0-Starting/ex00/: Hello.py
Python0-Starting/ex01/: format_ft_time.py
Python0-Starting/ex02/: find_ft_type.py
Python0-Starting/ex03/: NULL_not_found.py  tester.py
Python0-Starting/ex04/: whatis.py
Python0-Starting/ex05/: building.py
Python0-Starting/ex06/: filterstring.py  ft_filter.py
Python0-Starting/ex07/: sos.py
Python0-Starting/ex08/: Loading.py  tester.py
Python0-Starting/ex09/: LICENSE  README.md  pyproject.toml  setup.py  tester.py
Python0-Starting/ex09/ft_package/: __init__.py  count_in_list.py  string_operations.py
Python0-Starting/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Python1-Array/ex00/: give_bmi.py  tester.py
Python1-Array/ex01/: array2D.py  tester.py
Python1-Array/ex02/: load_image.py  tester.py
Python1-Array/ex03/: load_image.py  zoom.py
Python1-Array/ex04/: load_image.py  rotate.py
Python1-Array/ex05/: load_image.py  pimp_image.py  tester.py
Python2-DataTable/ex00/: load_csv.py
Python2-DataTable/ex01/: aff_life.py
Python2-DataTable/ex02/: aff_pop.py
Python2-DataTable/ex03/: projection_life.py
Python3-OOP/ex00/: tester.py
Python3-OOP/ex01/: S1E7.py  S1E9.py  tester.py
Python3-OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
Python3-OOP/ex03/: ft_calculator.py  tester.py
Python3-OOP/ex04/: ft_calculator.py  tester.py
Python4-Dod/ex00/: statistics.py  tester.py
Python4-Dod/ex01/: in_out.py
Python4-Dod/ex02/: callLimit.py
Python4-Dod/ex03/: new_student.py  tester.py
(+3 files in other folders)
