[project]
name = "ft_package"
version = "0.0.1"
description = "String Operations"
authors = [
  {name = "nali"}, {email = "nali@student.42.ae"}
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
requires-python = ">=3.7,<4"


[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
python-requires = ">=3.6"

